--- a/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
@@ -47,7 +47,7 @@ function check(){
 				var email = $("#email").val();
 				var url = "{{ path('_user_activeEmail',{'email': "email" }) }}";
 				url = url.replace('email',encodeURIComponent( email));
-				var html = "邮箱地址未激活，请重新<a href='"+url+"'>激活</a>";
+				var html = "<p>邮箱地址未激活，请重新<a href='"+url+"'>激活</a></p>";
 				$(".message").html(html);
 				$(".message").show();
 			}else{
