--- a/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
@@ -6,10 +6,14 @@
 {% endblock %} {% block javascript %}
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
+var existMobile = '';
+
+{% if existMobile is defined %}
 var existMobile = "{{ existMobile }}";
-var points = "{{ points }}";
+{% endif %}
+
 $(document).ready(function() {
-    {% if existMobile %}
+    {% if existMobile is defined %}
         $(".form dt:eq(1)").hide();
         $(".form dt:eq(2)").hide();
         $(".form dd:eq(1)").hide();
@@ -18,121 +22,56 @@ $(document).ready(function() {
     {% endif %}
 
     $(".otherUser").click(function (){
-        $("#existMobile").val('1');
+        $("#existMobile").val(0);
         $(".form dt:eq(0)").hide();
         $(".form dt:eq(1)").show();
         $(".form dt:eq(2)").show();
         $(".form dd:eq(1)").show();
     })
-
-    $("#active").hide();
-    $("#unactive").show();
 });
 function getFlowlist(){
     var filter = /^1[3|4|5|8][0-9]\d{4,8}$/;
-    if($("#mobile").val()==''){
-        $("#error").html("<font color='red'>请输入您的手机号码</font>");
-        return false;
-    }
-    if(!filter.test($("#mobile").val())){
-        $("#error").html("<font color='red'>输入的手机格式不正确</font>");
-        return false;
-    }
-    if($("#mobile").val()!=$("#re_mobile").val()){
-        $("#error").html("<font color='red'>2次输入的手机号码不相同</font>");
-        return false;
-    }
-
-    $.ajax({
-        url: Routing.generate('jili_api_exchange_getflowapi', {
-            "mobile": $("#mobile").val()
-        }),
-        type: "POST",
-        dataType: 'json',
-        success: function(obj){
-            var is_success = obj.is_success;
-            if(is_success){
-                var html = '<dd>选择兑换金额：</dd>';
-                html += '<dt><select id="point" name="point" onchange="changePoint();">';
-                var default_point = obj.product_list[0]['custom_prise']*100;
-                $.each(obj.product_list, function(i, n){
-                    html += "<option value='" + n.custom_prise*100 + "'>" + n.packagesize + "M </option>";
-                });
-                html += '= <span  class="rechange">'+default_point+'</span> 米粒</dt>';
-                $("#flow_package").html(html);
-                $("#rechangeMi").html(default_point);
-                $("#over").html(points-default_point);
-                showButton();
-            }else{
-                
-            }
-
-        // if(returnData.data.has_done){
-           //     $('.activityAd').hide();
-           // }else{
-           //     $('.activityAd').show();
-           // }
-        },
-        error: function(){
-            console.log('请求错误');
+    if( $("#existMobile").val()==0){
+        if($("#mobile").val()==''){
+            $("#error").html("<font color='red'>请输入您的手机号码</font>");
+            return false;
         }
-    });
-    
-    //var exchange_total = $(".rechange").html();
-    //$('#changes').val(exchange_total);
-    //$("#form1").submit();
-}
-
-function exchangeFlow(){
-    $("#form1").submit();
-}
-function changePoint(){
-    var total = $("#point").val();
-    var over = {{ points }} - total;
-    $(".rechange").html(total);
-    $(".rechangeMi").html(total);
-    $("#over").html(over);
-    showButton();
-}
-
-function showButton(){
-    if($("#over").html()<0){
-        $("#active").hide();
-        $("#unactive").show();
-    }else{
-        $("#active").show();
-        $("#unactive").hide();
+        if(!filter.test($("#mobile").val())){
+            $("#error").html("<font color='red'>输入的手机格式不正确</font>");
+            return false;
+        }
+        if($("#mobile").val()!=$("#re_mobile").val()){
+            $("#error").html("<font color='red'>2次输入的手机号码不相同</font>");
+            return false;
+        }
     }
+    $("#form1").submit();
 }
 
 </script>
 {% endblock %} {% block body %}
 <div class="webArticle exchange">
-<form action="{{ path('_exchange_flowInfo') }}" method="post" id="form1">
-<h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
+<form action="{{ path('_exchange_flowList') }}" method="post" id="form1">
+<h2><span class="font18 corLightRed crumbTit">流量包兑换信息</span></h2>
 <aside> {% include 'JiliApiBundle:User:rightInfo.html.twig' %} </aside>
 <article>
 <div class="wenwen">
     <div class="form">
     <dd>手机号码：</dd>
-    <dt>{{ existMobile }} <a class="otherUser">使用其他号码</a></dt>
-    <dt><input type="text" id="mobile" name="mobile" value="{{ mobile }}" /></dt>
+    <dt>{% if existMobile is defined %} {{ existMobile }} {% endif %}<a class="otherUser">使用其他号码</a></dt>
+    <dt><input type="text" id="mobile" name="mobile" value="{% if mobile is defined %}{{ mobile }}{% endif %}" /></dt>
     <dd>再次输入号码：</dd>
     <dt><input type="text" id="re_mobile" name="re_mobile" /></dt>
     </div>
-    <input type="hidden" name="existMobile" id="existMobile"/>
-    <input type="hidden" name="rechange" id="changes"/>
+    <input type="hidden" name="existMobile" id="existMobile" value="{% if existMobile is defined %}{{ existMobile }}{% endif %}"/>
     <div id="flow_package"></div>
-    <div class="changePoint mt50">本次充值所需米粒：<span class="rechangeMi" id="rechangeMi"></span></div>
-    <div class="changePoint">兑换后剩余米粒：<span id="over">{{ points-2010 }}</span></div>
-    <div><span id='error' style="color: red">{{code}}</span></div>
+    <div><span id='error' style="color: red">{% if code is defined %}{{code}}{% endif %}</span></div>
     <div class="btnArea mt50">
-        <a class="fontYH font18" id="flowList" onclick="getFlowlist();">获取流量包列表</a> 
-        <a class="fontYH font18" id="active" onclick="exchangeFlow();">兑换</a>
-        <a class="fontYH font18" id="unactive" >兑换</a>
+        <a class="fontYH font18" onclick="javascript:history.back(1);">返回</a>
+        <a class="fontYH font18" id="flowList" onclick="getFlowlist();">获取流量包列表</a>
     </div>
 </div>
-</article> 
+</article>
 <input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
 </form>
 </div>
