--- a/src/Jili/ApiBundle/Resources/views/User/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/info.html.twig
@@ -563,7 +563,8 @@ function addClass(id){
                  <td>{{ item.exchangeItemNumber }}元支付宝</td>
             {% elseif item.exType == 4 %}
                  <td>{{ item.exchangeItemNumber }}元手机话费</td>
-            {% else %}
+            {% elseif item.exType == 5 %}
+                  <td>{{ item.exchangeItemNumber }}M 流量包</td>
             {% endif %}
           <td>{% if item.status %} {{ item.finishDate.date | date('Y-m-d')  }} {% else %} {% endif %}</td>
           <td>{% if item.status %}{% if item.status==1 %}兑换成功 {% elseif item.status==2 %}兑换失败 {% else %} {% endif %} {% else %} 处理中 {% endif %}</td>
