兑换中心页面改版 #682

--- a/src/Jili/ApiBundle/Resources/views/Exchange/flowApply.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/flowApply.html.twig
@@ -38,9 +38,9 @@ function changePoint(selected_index){
     <div class="form">
     <dd>手机号码：</dd>
     <dt>{{ mobile_info.mobile }} </dt>
-    <dd>手机号码所属运营商：</dd>
+    <dd>运营商：</dd>
     <dt>{{ mobile_info.provider }}</dt>
-    <dd>手机号码归属省份：</dd>
+    <dd>归属地：</dd>
     <dt>{{ mobile_info.province }}
 
     <dd>流量包选择：</dd>
