--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -2,87 +2,116 @@
 {% block title %}积粒网-兑换中心{% endblock %}
 
 {% block stylesheet %}
-<link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
-<link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block javascript %}
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-	// $("div .btnArea a").attr("disabled", "disabled");
-	$("#amazonBtn").click(function(){
+    $("#amazonBtn").click(function(){
         return false;
-		$('#exchangeForm').attr("action", "{{ path('_exchange_amazonInfo') }}");
-		$("#exchangeForm").submit();
-	});
-	$("#alipayBtn").click(function(){
-		alipayClick();
-	});
-	$("#mobileBtn").click(function(){
-		$('#exchangeForm').attr("action", "{{ path('_exchange_mobileInfo') }}");
-		$("#exchangeForm").submit();
-	});
-	$("#flowBtn").click(function(){
-		$('#exchangeForm').attr("action", "{{ path('_exchange_flowInfo') }}");
-		$("#exchangeForm").submit();
-	});
+        $('#exchangeForm').attr("action", "{{ path('_exchange_amazonInfo') }}");
+        $("#exchangeForm").submit();
+    });
+    $("#alipayBtn").click(function(){
+        alipayClick();
+    });
+    $("#mobileBtn").click(function(){
+        $('#exchangeForm').attr("action", "{{ path('_exchange_mobileInfo') }}");
+        $("#exchangeForm").submit();
+    });
+    $("#flowBtn").click(function(){
+        $('#exchangeForm').attr("action", "{{ path('_exchange_flowInfo') }}");
+        $("#exchangeForm").submit();
+    });
 });
 function alipayClick(){
-	$.ajax({
+    $.ajax({
           url: "{{ path('_exchange_issetIdent') }}",
           post: "GET",
           success:function(data){
               if(data==1){
                 $('#exchangeForm').attr("action", "{{ path('_exchange_alipayInfo') }}");
-				$("#exchangeForm").submit();
+                $("#exchangeForm").submit();
               }else{
-              	$('#exchangeForm').attr("action", "{{ path('_exchange_identityCardComfirm',{'type': 'alipay'}) }}");
-              	$("#exchangeForm").submit();
+                $('#exchangeForm').attr("action", "{{ path('_exchange_identityCardComfirm',{'type': 'alipay'}) }}");
+                $("#exchangeForm").submit();
               }
           }
         });
 }
 </script>
 {% endblock %}
+
 {% block body %}
-<div class="webArticle exchange">
-<form method="post" name="exchangeForm" id="exchangeForm">
-	<div class="about">
-    	<div class="historyView">
-         <p class="fontYH">你可以将“米粒”兑换成<span class="corLightRed">手机费、支付宝现金、亚马逊礼品卡.....</span></p>
-            <a class="historyExchange" href="http://www.91jili.com/user/exchange/0/1"><strong>查看我的兑换历史</strong></a>
+<div class="main w1000">
+    <div class="exchangeV2">
+        <form method="post" name="exchangeForm" id="exchangeForm">
+        <ul class="clearfix">
+            <li>
+                <div class="clearfix">
+                    <div class="pic">
+                        <img src="{{asset('images/exchange/mobile.png')}}" alt="示意图"/>
+                    </div>
+                    <dl>
+                        <dt>手机充值</dt>
+                        <dd class="text">用积分为手机充值，<strong>2010米粒</strong>起兑</dd>
+                        <dd class="exchangeBtn">
+                            <span id="mobileBtn">立即兑换</span>
+                        </dd>
+                    </dl>
+                </div>
+            </li>
+            <li>
+                <div class="clearfix">
+                    <div class="pic">
+                        <img src="{{asset('images/exchange/amazon.png')}}" alt="示意图"/>
+                    </div>
+                    <dl>
+                        <dt>亚马逊礼品卡兑换</dt>
+                        <dd class="text">用积分兑换亚马逊礼品卡，<strong>2000米粒</strong>起兑</dd>
+                        <dd class="exchangeBtn">
+                            <span class="disabled" id="amazonBtn">暂时关闭</span>
+                        </dd>
+                    </dl>
+                </div>
+            </li>
+            <li>
+                <div class="clearfix">
+                    <div class="pic">
+                        <img src="{{asset('images/exchange/alipay.png')}}" alt="示意图"/>
+                    </div>
+                    <dl>
+                        <dt>支付宝现金兑换</dt>
+                        <dd class="text">用积分兑换支付宝现金，<strong>2050米粒</strong>起兑</dd>
+                        <dd class="exchangeBtn">
+                            <span id="alipayBtn">立即兑换</span>
+                        </dd>
+                    </dl>
+                </div>
+            </li>
+            <li>
+                <div class="clearfix">
+                    <div class="pic">
+                        <img src="{{asset('images/exchange/flow.png')}}" alt="示意图"/>
+                    </div>
+                    <dl>
+                        <dt>上网流量兑换</dt>
+                        <dd class="text">用积分兑换上网流量包，<strong>2000米粒</strong>起兑</dd>
+                        <dd class="exchangeBtn">
+                            <span id="flowBtn">立即兑换</span>
+                        </dd>
+                    </dl>
+                    <span class="newIcon"></span>
+                </div>
+            </li>
+        </ul>
+        <input type="hidden" value="btn" name="btn">
+        <input type="hidden" value="{{ key }}" name="tokenKey" />
+        </form>
+        <div class="viewLink">
+            <a class="historyExchange" href="{{ path('_user_exchange',{'type':0, 'exchangeType':1}) }}">查看我的兑换历史>></a>
         </div>
-		<div class="exchangeWay">
-        	<div class="mobileWay">
-            	<h4 class="corLightRed font22">手机充值</h4>
-                <p>用积分为手机充值，<strong class="corLightRed">2010</strong>米粒起兑</p>
-                <a class="exchangeBtn" id="mobileBtn">立即兑换</a>
-            </div>
-            <div class="amazonWay">
-            	<h4 class="corLightRed font22">兑换亚马逊礼品卡</h4>
-                <p>用积分兑换亚马逊礼品卡，<strong class="corLightRed">2000</strong>米粒起兑</p>
-                <a class="exchangeBtn amazonBtn" id="amazonBtn">暂时关闭</a>
-            </div>
-            <div class="alipayWay">
-            	<h4 class="corLightRed font22">支付宝兑换现金</h4>
-                <p>用积分通过支付宝直接兑换成现金，<br/><strong class="corLightRed">2050</strong>米粒起兑</p>
-                <a class="exchangeBtn" id="alipayBtn">立即兑换</a>
-            </div>
-           <div class="flowWay">
-                <h4 class="corLightRed font22">流量包</h4>
-                <p>用积分兑换流量包，<br/><strong class="corLightRed">2050</strong>米粒起兑</p>
-                <a class="exchangeBtn" id="flowBtn">立即兑换</a>
-            </div>
-            <div class="morePrizes">
-            	<h4>更多奖品，敬请期待</h4>
-                <p>给到的，一定超乎想象……</p>
-            </div>
-        </div>
-	<input type="hidden" value="btn" name="btn">
-	<input type="hidden" value="{{ key }}" name="tokenKey" />
-	</div>
-</form>
+    </div>
 </div>
-{% endblock %}
+{% endblock %} 
