--- a/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/index.html.twig
@@ -96,8 +96,8 @@ function alipayClick(){
                         <img src="{{asset('images/exchange/flow.png')}}" alt="示意图"/>
                     </div>
                     <dl>
-                        <dt>上网流量兑换</dt>
-                        <dd class="text">用积分兑换上网流量包，<strong>2000米粒</strong>起兑</dd>
+                        <dt>上网流量包兑换</dt>
+                        <dd class="text">用积分兑换上网流量包，电信、联通<strong>1590米粒</strong>起兑，移动<strong>1660米粒</strong>起兑</dd>
                         <dd class="exchangeBtn">
                             <span id="flowBtn">立即兑换</span>
                         </dd>
