--- a/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/alipayInfo.html.twig
@@ -9,130 +9,130 @@
 
 {% block javascript %}
 <script type="text/javascript">
-var existAlipay = "{{ existAlipay }}";
-var existRealName = "{{ existRealName }}";
-$(document).ready(function() {
-  {% if existAlipay %}
-    $(".form dt:eq(1)").hide();
-    $(".form dt:eq(2)").hide();
-    $(".form dt:eq(4)").hide();
-    $(".form dt:eq(5)").hide();
-    $(".form dd:eq(1)").hide();
-    $(".form dd:eq(3)").hide();
-  {% else %}
-    $(".form dt:eq(0)").hide();
-    $(".form dt:eq(3)").hide();
-  {% endif %}
-  $(".otherUser").click(function (){
-    $("#existAlipay").val('1');
-    $(".form dt:eq(0)").hide();
-    $(".form dt:eq(3)").hide();
-    $(".form dt:eq(1)").show();
-    $(".form dt:eq(2)").show();
-    $(".form dd:eq(1)").show();
-    $(".form dd:eq(3)").show();
-    $(".form dt:eq(4)").show();
-    $(".form dt:eq(5)").show();
-  })
-	if($("#over").html()<0){
-		$("#active").hide();
-    $("#unactive").show();
-		}else{
+  var existAlipay = "{{ existAlipay }}";
+  var existRealName = "{{ existRealName }}";
+  $(document).ready(function() {
+    {% if existAlipay %}
+      $(".form dd:eq(1)").hide();
+      $(".form dd:eq(2)").hide();
+      $(".form dd:eq(4)").hide();
+      $(".form dd:eq(5)").hide();
+      $(".form dt:eq(1)").hide();
+      $(".form dt:eq(3)").hide();
+    {% else %}
+      $(".form dd:eq(0)").hide();
+      $(".form dd:eq(3)").hide();
+    {% endif %}
+    $(".otherUser").click(function (){
+      $("#existAlipay").val('1');
+      $(".form dd:eq(0)").hide();
+      $(".form dd:eq(3)").hide();
+      $(".form dd:eq(1)").show();
+      $(".form dd:eq(2)").show();
+      $(".form dt:eq(1)").show();
+      $(".form dt:eq(3)").show();
+      $(".form dd:eq(4)").show();
+      $(".form dd:eq(5)").show();
+    })
+    if($("#over").html()<0){
+      $("#active").hide();
+      $("#unactive").show();
+    }else{
       $("#active").show();
       $("#unactive").hide();
     }
-});
-function change(){
-		if($("#over").html()>=0){
+  });
+  function change(){
+    if($("#over").html()>=0){
       var filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
       var mobile = /^1[3|4|5|8][0-9]\d{4,8}$/;
       if(existAlipay=='' || $("#existAlipay").val()!=''){
         if($("#alipay").val()==''){
-            $("#error").html("<font color='red'>请输入您的支付宝账号</font>");
-            return false;
+          $("#error").html("<font color='red'>请输入您的支付宝账号</font>");
+          return false;
         }
         if(!filter.test($("#alipay").val())){
-            if(!mobile.test($("#alipay").val())){
-              $("#error").html("<font color='red'>支付宝账号应是邮件格式或手机格式</font>");
-              return false;
-            }
+          if(!mobile.test($("#alipay").val())){
+            $("#error").html("<font color='red'>支付宝账号应是邮件格式或手机格式</font>");
+            return false;
+          }
         }
         if($("#alipay").val()!=$("#re_alipay").val()){
           $("#error").html("<font color='red'>2次输入的支付宝账号不相同</font>");
           return false;
         }
-         if($("#real_name").val()==''){
-            $("#error").html("<font color='red'>请输入您的真实姓名</font>");
-            return false;
+        if($("#real_name").val()==''){
+          $("#error").html("<font color='red'>请输入您的真实姓名</font>");
+          return false;
         }
       }
       var exchange_total = $(".rechange").html();
       $('#changes').val(exchange_total);
-			$("#form1").submit();
+      $("#form1").submit();
     }
-}
-function changePoint(){
-	var total = $("#point").val();
-	var over = {{ points }} - total;
-	$(".rechange").html(total);
-  $(".rechangeMi").html(total);
-	$("#over").html(over);
-	if($("#over").html()<0){
-		$("#active").hide();
-		$("#unactive").show();
-	}else{
-    $("#active").show();
-    $("#unactive").hide();
   }
-}
+  function changePoint(){
+    var total = $("#point").val();
+    var over = {{ points }} - total;
+    $(".rechange").html(total);
+    $(".rechangeMi").html(total);
+    $("#over").html(over);
+    if($("#over").html()<0){
+      $("#active").hide();
+      $("#unactive").show();
+    }else{
+      $("#active").show();
+      $("#unactive").hide();
+    }
+  }
 </script>
 {% endblock %}
 
 {% block body %}
 <div class="webArticle exchange">
-<form action="{{ path('_exchange_alipayInfo') }}" method="post" id="form1">
-  <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
-  <aside>
-   {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
-  </aside>
-  <article>
+  <form action="{{ path('_exchange_alipayInfo') }}" method="post" id="form1">
+    <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
+    <aside>
+     {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
+   </aside>
+   <article>
     <div class="wenwen">
-      <div class="form">
-        <dd>支付宝账号：</dd>
-        <dt>{{ existAlipay }} <a class="otherUser">使用其他账号</a></dt>
-        <dt><input id="alipay" type="text" name="alipay" value="{{ alipay }}" /></dt>
-        <dd>再次输入账号：</dd>
-        <dt><input id="re_alipay" type="text" name="re_alipay" /></dt>
-        <dd>姓名：</dd>
-        <dt>{{ existRealName }}</dt>
-        <dt><input id="real_name" type="text" name="real_name" /></dt>
-        <dd>&nbsp;</dd><dt style="color: #EA4B11;">请填写真实姓名与支付宝匹配，否则有可能兑换失败</dt>
-        <dd>选择兑换金额：</dd>
-        <dt><select id="point" name="point"  onchange="changePoint();">
-            <option value='2050'>20元</option>
-            <option value='3030'>30元</option>
-            <option value='5000'>50元</option>
-          </select>
-         = <span  class="rechange">2050</span> 米粒</dt>
-         <dd></dd><dt class="notice">由于支付宝每笔兑换会收取1元的手续费。
-         2014-05-27日起，对于2000米粒兑换20元支付宝现金的每笔兑换，手续费为0.5元/次(余下0.5元由积粒网承担)；
-         对于3000米粒兑换30元支付宝现金的每笔兑换，手续费为0.3元/次(余下0.7元由积粒网承担)。
-          而5000米粒兑换50元支付宝现金的兑换，积粒网将会全额承担兑换手续费。</dt>
-      </div>
-       <input type="hidden" name="existAlipay" id="existAlipay"/>
-       <input type="hidden" name="existRealName" id="existRealName"/>
+      <dl class="form">
+        <dt>支付宝账号：</dt>
+        <dd>{{ existAlipay }} <a class="otherUser">使用其他账号</a></dd>
+        <dd><input id="alipay" type="text" name="alipay" value="{{ alipay }}" /></dd>
+        <dt>再次输入账号：</dt>
+        <dd><input id="re_alipay" type="text" name="re_alipay" /></dd>
+        <dt>姓名：</dt>
+        <dd>{{ existRealName }}</dd>
+        <dd><input id="real_name" type="text" name="real_name" /></dd>
+        <dt>&nbsp;</dt><dd style="color: #EA4B11;">请填写真实姓名与支付宝匹配，否则有可能兑换失败</dd>
+        <dt>选择兑换金额：</dt>
+        <dd><select id="point" name="point"  onchange="changePoint();">
+          <option value='2050'>20元</option>
+          <option value='3030'>30元</option>
+          <option value='5000'>50元</option>
+        </select>
+        = <span  class="rechange">2050</span> 米粒</dd>
+        <dt></dt><dd class="notice">由于支付宝每笔兑换会收取1元的手续费。
+        2014-05-27日起，对于2000米粒兑换20元支付宝现金的每笔兑换，手续费为0.5元/次(余下0.5元由积粒网承担)；
+        对于3000米粒兑换30元支付宝现金的每笔兑换，手续费为0.3元/次(余下0.7元由积粒网承担)。
+        而5000米粒兑换50元支付宝现金的兑换，积粒网将会全额承担兑换手续费。</dd>
+      </dl>
+      <input type="hidden" name="existAlipay" id="existAlipay"/>
+      <input type="hidden" name="existRealName" id="existRealName"/>
       <input type="hidden" name="rechange" id="changes"/>
       <div class="changePoint mt50">本次充值所需米粒：<span class="rechangeMi">2050</span></div>
       <div class="changePoint">兑换后剩余米粒：<span id="over">{{ points-2050 }}</span></div>
       <div><span id='error' style="color:red">{{code}}</span></div>
       <div class="btnArea mt50">
-          <a class="fontYH font18" id="active" onclick="change();">提交</a>
-          <a class="fontYH font18" id="unactive" onclick="change();">提交</a>
-     </div>
+        <a class="fontYH font18" id="active" onclick="change();">提交</a>
+        <a class="fontYH font18" id="unactive" onclick="change();">提交</a>
+      </div>
     </div>
   </article>
   <input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
-  </form>
+</form>
 </div>
 {% endblock %}
 
