--- a/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
@@ -1,10 +1,10 @@
-{% extends 'JiliFrontendBundle::base.html.twig' %} 
-{% block title%}积粒网-兑换流量包{% endblock %} 
+{% extends 'JiliFrontendBundle::base.html.twig' %}
+{% block title%}积粒网-兑换流量包{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/personalAside.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/exchange.css')}}" rel="stylesheet" type="text/css" />
-{% endblock %} 
+{% endblock %}
 {% block javascript %}
 <script type="text/javascript">
     var existMobile = '';
@@ -30,7 +30,7 @@
         })
     });
     function getFlowlist(){
-        var filter = /^1[3|4|5|8][0-9]\d{4,8}$/;
+    var filter = /^1\d{10}$/;
         if( $("#existMobile").val()==0){
             if($("#mobile").val()==''){
                 $("#error").html("<font color='red'>请输入您的手机号码</font>");
@@ -48,7 +48,7 @@
         $("#form1").submit();
     }
 </script>
-{% endblock %} 
+{% endblock %}
 {% block body %}
 <div class="webArticle exchange">
     <form action="{{ path('_exchange_flowList') }}" method="post" id="form1">
