--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -34,6 +34,9 @@ $(document).ready(function() {
                 $("div article .screen a:eq(3)").addClass("hover");
                 break;
             case "4":
+                $("div article .screen a:eq(4)").addClass("hover");
+                break;
+            case "5":
                 $("div article .screen a:last").addClass("hover");
                 break;
             default:
