兑换页面加通知 #682

--- a/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/flowInfo.html.twig
@@ -55,6 +55,7 @@
         <h2><span class="font18 corLightRed crumbTit">流量包兑换信息</span></h2>
         <aside> {% include 'JiliApiBundle:User:rightInfo.html.twig' %} </aside>
         <article>
+            {% if content is defined and content != '' %}<div>{{content}}</div>{% endif %}
             <div class="wenwen">
                 <dl class="form">
                     <dt>手机号码：</dt>
