#699 修改移动用户充流量说明文字

--- a/src/Jili/ApiBundle/Resources/views/Exchange/flowApply.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/flowApply.html.twig
@@ -78,10 +78,11 @@
                 <div class="flowTips">
                     <div class="title">中国移动用户充流量说明：</div>
                     <p><em>•</em>生效时间：充值成功，短信提示后，立即生效。<br/>
-                    <em>•</em>使用范围：仅限北京移动用户，全国漫游。<br/>
+                    <em>•</em>使用范围：全国移动用户，全国漫游。<br/>
                     <em>•</em>使用有效期：当月有效。<br/>
                     <em>•</em>充值次数限制：单个号码每月仅限充值10次。<br/>
-                    <em>•</em>温馨提醒：月末最后一天建议不要充值。</p>
+                    <em>•</em>温馨提醒：每月后三天不受理再次充值业务。<br/>
+                    <em>•</em>售后说明：只要接收到10086短信就说明100%到账，各省目前查询方式不同，10086人工查询集团统付流量或退费减免可查到！（可致电400-6696-365索取具体查询方法），一旦充值不回退，充值失败不收费。</p>
                 </div>
                 
                 {% elseif(mobile_info.provider =='联通')%}
